--- a/Assignment1/styles.css
+++ b/Assignment1/styles.css
@@ -14,8 +14,8 @@ a {
 }
 
 body {
-    background-color: whitesmoke;
-    font-family: 'Times New Roman', Times, serif;
+    background-color: rgb(255, 255, 255);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .header {
@@ -24,8 +24,8 @@ body {
     position: fixed;
     width: 100%;
     top: 0;
-    backdrop-filter: blur(6px);
-
+    backdrop-filter: blur(5px);
+    z-index: 60000;
 }
 
 .header_content {
@@ -36,29 +36,48 @@ body {
     min-height: 50px;
 }
 
-.logo {
+.logotext {
     font-size: 25px;
     letter-spacing: -1.5px;
     font-weight: 700;
+    transition: 0.5s;
+}
+.logotext:hover{
+    color: rgb(61, 7, 112);
 }
 
-.nav {
-
+.logo {
+    align-items: end;
 }
+
+.logo img {
+    max-width: 10%;
+    border-radius: 15px;
+    padding-top: 1%;
+    transition: 0.4s;
+}
+
+.logo img:hover{
+    max-width: 11%;
+    border-radius: 10px;
+    padding-top: 1%;
+}
+
 
 .nav_list {
     display: flex;
-    column-gap: 14px;
+    column-gap: 25px;
 }
 
 .nav_item {
 
+
 }
 
 .nav_link {
-    color: grey ;
+    color: rgb(109, 105, 105) ;
     font-weight: 500;
-    font-size: 15px;
+    font-size: 25px;
     transition: all 0.4s;
 }
 
@@ -67,28 +86,41 @@ body {
 }
 
 .btn {
-    background-color: blue;
-    color: white;
+    background-color: rgb(31, 31, 32);
+    color: rgb(255, 255, 255);
     padding: 7px 10px;
     border-radius: 100px;
-    font-size: 12px;
-    transition: all 0.4s;
+    font-size: 15px;
+    transition: 0.4s;
 }
 
 .btn:hover {
-    color: aqua;
+    color: rgb(182, 185, 185);
+    max-height: 1.1x;
 }
 
 .main {
     margin-top: 80px;
 }
 
-.text {
-    color: red;
+.container {
+    text-shadow: 10px;
+    transition: 0.5s;
+}
+.container:hover{
+    padding-top: 45%;
+    opacity: 0;
+}
+
+.contactimg {
+    margin-top: 50px;
 }
 
 
-@media (max_width: 800px) {
+
+@media screen and (max-width: 600px) {
+
+    
 
     .header_content {
         flex-direction: column;
@@ -101,21 +133,140 @@ body {
 
     }
 
-    .heading {
-        font-size: 40px;
+
+    .head {
+        font-size: 30px;
+        margin-top: 15%;
+    }
+
+    .para {
+        display: none;
+    }
+
+    .logo {
+        display: none;
     }
 
 }
 
-.firstpg {
+@media screen and (max-width: 450px) {
+
+    .head {
+        font-size: 30px;
+        margin-top: 20%;
+        color: grey;
+    }
+}
+
+@media screen and (max-width: 330px) {
+    .head {
+        font-size: 30px;
+        margin-top: 30%;
+        color: grey;
+    }
+}
+
+.bgimg {
     align-items: center;
     width: 100%;
     height: 100%;
-    z-index: 2;
+    
     
 }
-.firstpg img{
+.bgimg img{
     width: 100%;
     max-width: 100%; /* Limit the max width to the screen width */
     height: 100%;
 }
+
+.firstpg img{
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+}
+
+.firstpg img:hover {
+    width: 100%;
+    max-width: 100%; /* Limit the max width to the screen width */
+    height: 100%;
+    opacity: 0;
+}
+
+
+.stacked {
+    display: grid;
+    place-items: center;
+}
+
+.stacked > * {
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+}
+
+
+.container {
+    height: 50%;
+    width: 50%;
+    max-width: 1000px;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    position: relatives;
+    z-index: 1;
+}
+
+.text {
+    align-items: center;
+    font-size: 18px;
+    color: white;
+}
+
+
+table {
+    background-color: rgb(22, 22, 21);
+    border-collapse: collapse;
+    padding: 1 rem;
+    text-align: center;
+    width: 60%;
+    margin: 50px 20% 50px;
+}
+
+caption, th, td {
+    padding: 1%;
+}
+
+th {
+    background-color: hsl(0, 0%, 0% / 0.5) ;
+}
+
+caption {
+    background-color: hsl(0, 0%, 0%) ;
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-transform: capitalize;
+}
+
+tr:nth-of-type(2n) {
+    background-color: rgb(50, 61, 68);
+}
+
+.button {
+    background-color: rgb(69, 69, 83);
+    color: white;
+    padding: 7px 10px;
+    border-radius: 100px;
+    font-size: 15px;
+    transition: all 0.4s;
+}
+
+.button:hover {
+    color: rgb(1, 34, 34);
+}
+
+.allButton {
+    text-align: center;
+    margin: auto;
+}
+
+
