--- a/Assignment1/styles.css
+++ b/Assignment1/styles.css
@@ -4,6 +4,9 @@
     box-sizing: 0;
 }
 
+/* div {
+    width: 100%;
+} */
 ul {
     list-style: none;
 }
@@ -95,9 +98,20 @@ body {
 }
 
 .btn:hover {
-    color: rgb(182, 185, 185);
-    max-height: 1.1x;
+    color: rgb(1, 34, 34);
+    background-color: rgb(207, 208, 209);
 }
+
+.sumbox {
+
+    padding: 5% 20%;
+    text-align: center;
+    max-width: 60%;
+    box-shadow: 5px #aaa;
+    transition: .5s;
+}
+
+
 
 .main {
     margin-top: 80px;
@@ -124,18 +138,17 @@ body {
 
     .header_content {
         flex-direction: column;
-        padding: 15px 0;
-        row-gap: 10px;
+        padding: 10px 0;
+        row-gap: 5px;
     }
 
     .nav_list {
-        column-gap: 20px;
+        column-gap: 10px;
 
     }
 
-
     .head {
-        font-size: 30px;
+        font-size: 20px;
         margin-top: 15%;
     }
 
@@ -147,20 +160,25 @@ body {
         display: none;
     }
 
+
 }
 
 @media screen and (max-width: 450px) {
 
     .head {
-        font-size: 30px;
-        margin-top: 20%;
+        font-size: 20px;
+        margin-top: 10vh;
         color: grey;
+    }
+
+    .stacked {
+        margin-top: 15vh;
     }
 }
 
-@media screen and (max-width: 330px) {
+@media (max-width: 330px) {
     .head {
-        font-size: 30px;
+        font-size: 20px;
         margin-top: 30%;
         color: grey;
     }
@@ -183,7 +201,7 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
-    transition: 0.5s;
+    transition: 1s;
 }
 
 .firstpg img:hover {
@@ -227,7 +245,7 @@ table {
     background-color: rgb(22, 22, 21);
     border-collapse: collapse;
     padding: 1 rem;
-    text-align: center;
+    text-align: left;
     width: 60%;
     margin: 50px 20% 50px;
 }
@@ -248,7 +266,26 @@ caption {
 }
 
 tr:nth-of-type(2n) {
-    background-color: rgb(50, 61, 68);
+    opacity: .5;
+}
+
+
+@media (max-width: 800px) {
+    table {
+        max-width: 40%;
+    }
+    th {
+        display: none;
+    }
+    td {
+        display: grid;
+        grid-template-columns: 15ch auto;
+    }
+    td::before{
+        content: attr(data-cells)":  ";
+        font-weight: 500;
+    }
+
 }
 
 .button {
@@ -262,6 +299,8 @@ tr:nth-of-type(2n) {
 
 .button:hover {
     color: rgb(1, 34, 34);
+    background-color: rgb(207, 208, 209);
+    font-weight: bolder;
 }
 
 .allButton {
@@ -269,4 +308,105 @@ tr:nth-of-type(2n) {
     margin: auto;
 }
 
+audio {
+    margin: 20px;
+    box-shadow: #aaa;
+    border-radius: 5px;
+}
+
+.divbox{
+    display: flex;
+    justify-content: space-evenly;
+    max-width: 100%;
+    flex-wrap: wrap;   
+}
+
+video {
+    position: relative;
+    
+    height: 85vh;
+}
+
+
+.contact {
+    max-width: 400px;
+    width: 100%;
+    z-index: 1;
+    background-color: #fff;
+    opacity: .8;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.cell {
+    margin-bottom: 20px;
+}
+
+.cell label {
+    display: block;
+    font-size: 16px;
+    margin-bottom: 8px;
+}
+
+.cell input, .cell textarea {
+    width: 100%;
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.cell textarea {
+    resize: vertical;
+    min-height: 100px;
+}
+
+
+footer {
+    background-color: #333;
+    color: white;
+    padding: 20px 0;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.footer-box {
+    flex: 1;
+    min-width: 200px;
+    margin: 10px;
+}
+
+.footer-box h3 {
+    margin-bottom: 10px;
+}
+
+.footer-box ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-box ul li a {
+    color: white;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.footer-box ul li a:hover {
+    color: #aaa;
+}
+
+
+
+@media (max-width: 600px) {
+    .footer-container {
+        flex-direction: column;
+        align-items: center;
+    }
+}
 
