--- a/Assignment1/styles.css
+++ b/Assignment1/styles.css
@@ -130,6 +130,11 @@ body {
     margin-top: 50px;
 }
 
+.map {
+    width: 100%;
+    height: 240px;
+    border: 10;
+}
 
 
 @media screen and (max-width: 600px) {
@@ -169,6 +174,9 @@ body {
         font-size: 10px;
     }
 
+    .map {
+        max-width: 80%;
+    }
 
 }
 
